# nextjs-code-analyzer

./: .gitignore  .gitmodules  ReadMe.md  jest.config.js  package-lock.json  package.json  parse.js  parse.ts  test.js  tsconfig.json
.github/workflows/: cpp.yml  extension.yml  typescript-build-test.yml  typescript.yml
cpp/: CMakeLists.txt
cpp/include/analysis/: analysis.h
cpp/include/reader/: json_reader.h
cpp/src/analysis/: CMakeLists.txt  analyzer.cpp
cpp/src/reader/: CMakeLists.txt  json_reader.cpp  node_addon.cpp
implementations/cpp/: CMakeLists.txt  node_addon.cpp
implementations/cpp/include/Utils/: timer.h
implementations/cpp/include/analysis/: analysis.h
implementations/cpp/include/manager/: json_manager.h
implementations/cpp/include/models/: analysis_report.h  token_info.h
implementations/cpp/include/optimizer/: optimizer.h
implementations/cpp/include/reader/: json_reader.h
implementations/cpp/include/reporter/: reporter.h
implementations/cpp/include/reporter/chain/: chain_builder.h  comment_strategy_chain_builder.h
implementations/cpp/include/reporter/patterns/: comment_strategy_chain_builder.h  comment_strategy_interface.h  use_client_strategy.h
implementations/cpp/include/reporter/strategy/: comment_strategy_interface.h  hook_strategy.h  html_strategy.h  other_strategies.h  use_client_strategy.h  useclient_strategy.h
implementations/cpp/include/utils/: constants.h  timer.h
implementations/cpp/src/analysis/: CMakeLists.txt  analysis.cpp  analyzer.cpp
implementations/cpp/src/manager/: CMakeLists.txt  json_manager.cpp
implementations/cpp/src/models/: CMakeLists.txt  analysis_report.cpp
implementations/cpp/src/optimizer/: CMakeLists.txt
implementations/cpp/src/reader/: CMakeLists.txt  json_reader.cpp  node_addon.cpp
implementations/cpp/src/reporter/: CMakeLists.txt  reporter.cpp
implementations/cpp/src/reporter/chain/: chain_builder.cpp  comment_strategy_chain_builder.cpp
implementations/cpp/src/reporter/strategy/: hook_strategy.cpp  html_strategy.cpp  use_client_strategy.cpp
implementations/cpp/tests/: CMakeLists.txt  CmakeLists.txt  analysis_test.cpp  hook_chain_builder_test.cpp  hook_strategy_test.cpp  html_strategy_test.cpp  reporter_test.cpp  use_client_chain_builder.cpp  use_client_strategy_test.cpp  useclient_chain_builder.cpp  useclient_strategy_test.cpp
implementations/typescript/: package.json  tsconfig.json
implementations/typescript/extensions/nextjs-code-analyzer/: README.md  package.json
implementations/typescript/extensions/nextjs-code-analyzer/src/: activate_extension.ts  code_analyzer.ts  diagnostic_manager.ts  extension.js  extension.js.map  extension.ts  index.ts
implementations/typescript/nextjs-code-analyzer-extension/: CHANGELOG.md  README.md  jest.config.js  nextjs-code-analyzer-0.0.2.vsix  nextjs-code-analyzer-0.0.4.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
implementations/typescript/nextjs-code-analyzer-extension/src/: activate_extension.ts  code_analyzer.ts  index.ts
implementations/typescript/nextjs-code-analyzer-extension/src/tests/: addon_test.test.ts  addon_test_data.txt  diagnostic_manager_test.test.ts  path_test.test.ts
implementations/typescript/src/: code_analyser.ts  index.ts  jest.config.js  log.txt  package-lock.json  package.json  parse.js  parse.ts  tsconfig.json  tsconfig.spec.json
implementations/typescript/src/test_data/: test_data_1.js  test_data_2.js  test_data_3.js
implementations/typescript/src/tests/: parse_json_file.test.ts  test.js  test_data_1.js
implementations/typescript/tests/: test.js
